# Qt_NotesApp

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp
src/: CMakeLists.txt  note.cpp  note.h  notesmodel.cpp  notesmodel.h
